[package]
name = 'yoda-creator-economy'
version = '3.0.0-monthly-2021-10'
description = 'Creator Economy'
edition = '2018'
license = 'Apache-2.0'
publish = false
repository = 'https://github.com/WowLabz/yoda_creator_economy_node'
build = 'build.rs'

[[bin]]
name = 'yoda-creator-economy'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.yoda-creator-economy-runtime]
path = '../runtime'
version = '3.0.0-monthly-2021-10'

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'
serde_json = "1.0.69"

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12" 

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.12"

[features]
default = []
runtime-benchmarks = ['yoda-creator-economy-runtime/runtime-benchmarks']
